--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,131 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+header{
+  padding: 30px 0;
+  background-color: aliceblue;
+  font-weight: bold;
+  font-size: 20px;
+  text-transform: uppercase;
+}
+
+.gap-25{
+  width: 100%;
+  height: 25px;
+  clear: both;
+}
+
+h1{
+  font-size: 20px !important;
+  font-weight: bold !important;
+}
+
+#sidebar{
+  height: calc(100% - 90px);
+  position: fixed!important;
+  z-index: 1;
+  overflow: auto;
+  background-color: lightslategrey;
+}
+
+#content{
+  height: calc(100% - 90px);
+  position: fixed!important;
+  z-index: 1;
+  overflow: auto;
+}
+
+#sidebar .item{
+  width: 100%;
+  display: block;
+  padding: 8px 16px;
+  text-align: left;
+  border: none;
+  white-space: normal;
+  float: none;
+  outline: 0;
+  color: white;
+}
+
+#sidebar h3.item{
+  font-weight: bold;
+}
+
+#sidebar h4.item{
+  font-weight: normal;
+  color: aliceblue;
+  font-size: 12px;
+}
+
+#sidebar a{
+  width: 100%;
+  display: block;
+  padding: 8px 16px;
+  text-align: left;
+  border: none;
+  white-space: normal;
+  float: none;
+  outline: 0;
+  color: white;
+}
+
+#sidebar a:hover{
+  background-color: dimgray;
+  text-decoration: none;
+}
+
+.item input{
+  outline: none;
+  padding: 0 10px;
+}
+
+.item input[type="submit"]{
+  /*border: 2px solid white;*/
+  border: none;
+  text-transform: uppercase;
+  background-color: transparent;
+  font-weight: bold;
+  color: white;
+}
+
+.item input[type="text"]{
+  border: none;
+}
+
+.item input[type="submit"]:hover{
+  color: black;
+}
+
+#film{
+  width: 100%;
+  text-align: left;
+}
+
+#film .title{
+  width: 100%;
+  display: block;
+  padding: 8px 16px;
+  text-align: left;
+  border: none;
+  white-space: normal;
+  float: none;
+  outline: 0;
+  font-weight: bold;
+}
+
+#film .item{
+  width: 100%;
+  display: block;
+  padding: 8px 16px;
+  text-align: left;
+  border: none;
+  white-space: normal;
+  float: none;
+  outline: 0;
+}
+
+img{
+  width: auto;
+  max-width: 100%;
+}
